# wasm-decompile

./: Cargo.toml  README.md  TODO.md  test.wat
.github/: main.yml  playground.yml
.github/actions/install-rust/: action.yml
.github/workflows/: main.yml  playground.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decompile.rs
playground/: package-lock.json  package.json
playground/component/src/: lib.rs
playground/component/wit/: world.wit
playground/pages/: index.html
playground/src/: print.ts  utilities.ts  worker.ts
src/: main.rs
src/ir/: decode.rs  graphviz.rs  mod.rs  passes.rs  print.rs
tests/: snapshot.rs
tests/snapshots/: func-params.snapshot  func-params.wat  if-results..snapshot  if-results.snapshot  if-simple.snapshot  if-simple.wat  regress-1.snapshot  regress-1.wat  regress-2.snapshot  regress-2.wat  regress-3.snapshot  regress-3.wat  regress-4.snapshot  regress-4.wat  regress-5.snapshot  regress-5.wat  regress-6.snapshot  regress-6.wat  ublock-publicsuffixlist.snapshot  ublock-publicsuffixlist.wat  unreachable.snapshot  unreachable.wat
